--- a/.github/workflows/push-create-xlsform-meg.yml
+++ b/.github/workflows/push-create-xlsform-meg.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Push pipeline to OpenHEXA
         run: |
           openhexa pipelines push create-xlsform \
-            -n ${{ github.sha }} \
-            -l "https://github.com/BLSQ/pathways-typing-pipelines/commit/${{ github.sha }}" \
+            --code "create-xlsform" \
+            --description "${{ github.event.head_commit.message }}" \
+            --link "https://github.com/BLSQ/pathways-typing-pipelines/commit/${{ github.sha }}" \
             --yes
